[ECLIPES]_Fix loi AngularJS

--- a/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
@@ -30,8 +30,8 @@
 
 </head>
 
-<body ng-app="shopping-cart-app" ng-controller="shopping-cart-ctrl">
-<!-- <body ng-app="favorite-app" ng-controller="favorite-ctrl"> -->
+<body ng-app="app" ng-controller="shopping-cart-ctrl">
+ 
 
 
 
@@ -122,7 +122,6 @@
              imgZoom.style.opacity = 0;
          })
      </script>
-
 </body>
 
 </html>
