--- a/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
@@ -271,6 +271,8 @@
 
 		<!-- sản phẩm tương tự start  -->
 
+    <!-- sản phẩm tương tự start  -->
+
     <div class="sanphamtuongtu">
         <h4 class="title-bosuutap">[[#{spchitiet.sptuongtu}]]</h4>
         <div class="container-fluid my-5">
@@ -321,35 +323,13 @@
                             </div>
                         </div>
 
-												<h4 class="card-title">
-													<span class="card-title-normal"
-														th:text="${#numbers.formatDecimal(p.price, 0, 'COMMA', 0 , 'POINT')} + ' ₫'"></span>
-												</h4>
-												<h4 class="card-title" style="color: white;">123</h4>
-												<!--                                     </div> -->
-												<!--                                     <div th:if="${sanpham.giamgia.giamgia != 0}"> -->
-												<!--                                     	<h4 class="card-title"><span class="card-title-old"  th:text="${#numbers.formatDecimal(sanpham.gia, 0, 'COMMA', 0 , 'POINT')} + ' ₫'"></span></h4> -->
-												<!-- 											 <h4 class="card-title"><span class="card-title-sale"  th:text="${#numbers.formatDecimal(sanpham.giamgiasp, 0, 'COMMA', 0 , 'POINT')}  + ' ₫'"></span></h4> -->
-												<!--                                     </div> -->
+                    </div>
+</div>
+            </div>
+        </div>
+    </div>
 
-											</div>
-										</a>
-										<div class="row d-flex justify-content-center">
-											<a th:href="@{|/sanpham/chitietsp/${p.productID}|}"
-												class="btn product-btn"><i class="ti-shopping-cart"></i>
-												Chi Tiết</a> <a th:href="@{/yeuthich}" class="btn product-btn"><i
-												class="ti-heart"></i> Yêu thích</a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
+    <!-- sản phẩm tương tự end  -->
 		<!-- sản phẩm tương tự end  -->
 
 		<!-- mainChitietsp end -->
