[Eclipse]_Hiển thị size, color trong giỏ hàng

--- a/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
@@ -27,7 +27,7 @@
 							<li class="nav-item"><a class="nav-link nav-link-custom"
 								th:href="@{/gioithieu}" th:text="#{nav.about}">THÔNG TIN</a></li>
 							<li class="nav-item"><a class="nav-link nav-link-custom"
-								th:href="@{/giohang}" th:text="#{nav.cart}">GIỎ HÀNG</a></li>
+								th:href="@{/cart}" th:text="#{nav.cart}">GIỎ HÀNG</a></li>
 							
 							<li class="nav-item dropdown">
                                 <a class="nav-link nav-link-custom dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" th:text="#{nav.language}">Ngôn ngữ</a>
