--- a/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
@@ -27,6 +27,10 @@
 	rel="stylesheet" />
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+	
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </head>
 
