--- a/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
@@ -122,6 +122,7 @@
              imgZoom.style.opacity = 0;
          })
      </script>
+<!--      <script th:src="@{/static/assets/js/product-ctrl.js}" type="text/javascript"></script> -->
 </body>
 
 </html>
