--- a/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<main ng-app="admin-app" ng-controller="product-ctrl">
+	<main>
 		<div id="mainProduct">
 			<div class="container-fluid">
 				<div class="row mt-4">
@@ -152,7 +152,7 @@
 												class="btn product-btn"><i class="ti-shopping-cart"></i>
 												[[#{ssanpham.chitiet}]]</a>
 											<button type="submit"
-												th:attr="ng-click=@{|favo.add(${p.productID})|}"
+											th:attr="ng-click=@{|favo.add(${p.productID})|}"
 												class="btn product-btn">
 												<i class="ti-heart"></i> [[#{ssanpham.yeuthich}]]
 											</button>
