[ECLIPSE] Trang chủ user
- Hiển thị sản phẩm khuyến mãi

--- a/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
@@ -1,183 +1,133 @@
 <!DOCTYPE html>
-<html  
-    xmlns:th="http://www.thymeleaf.org" >
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-<div th:fragment="user_menu">
-	<!-- header start -->
-	<div id="header">
-		<div class="menu">
-			<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-				<div class="container-fluid">
-					<a class="navbar-brand" th:href="@{/trangchu}"><img
-						src="/assets/images/logo.png" alt="logo"></a>
-					<button class="navbar-toggler" type="button"
-						data-bs-toggle="collapse" data-bs-target="#mynavbar">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="mynavbar">
-						<ul class="navbar-nav mx-auto">
-							<li class="nav-item"><a class="nav-link nav-link-custom"
-								th:href="@{/trangchu}" th:text="#{nav.home}">TRANG CHỦ</a></li>
-							<li class="nav-item"><a class="nav-link nav-link-custom"
-								th:href="@{/sanpham}" th:text="#{nav.product}">SẢN PHẨM</a></li>
-							<li class="nav-item"><a class="nav-link nav-link-custom"
-								th:href="@{/gioithieu}" th:text="#{nav.about}">THÔNG TIN</a></li>
-							<li class="nav-item"><a class="nav-link nav-link-custom"
-								th:href="@{/cart}" th:text="#{nav.cart}">GIỎ HÀNG</a></li>
-							
-							<li class="nav-item dropdown">
-                                <a class="nav-link nav-link-custom dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" th:text="#{nav.language}">Ngôn ngữ</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="?lang=vi" th:text="#{nav.vi}">Tiếng Việt</a></li>
-                                        <li><a class="dropdown-item" href="?lang=en" th:text="#{nav.en}">English</a></li>
-                                        
-                                    </ul>
-                            </li>
-							
-							<li class="nav-item dropdown">
-								<div th:if="${user == null}">
-									<a class="nav-link nav-link-custom dropdown-toggle" href="#"
-										role="button" data-bs-toggle="dropdown" th:text="#{nav.account}">TÀI KHOẢN</a>
-								</div>
-								<div th:if="${user != null}">
-									<a class="nav-link nav-link-custom dropdown-toggle" href="#"
-										role="button" data-bs-toggle="dropdown"
-										th:text="${user.hoten}"></a>
-								</div>
-
-								<ul class="dropdown-menu">
-									
-										<li><a class="dropdown-item" th:href="@{/dangnhap}" th:text="#{nav.login}">ĐĂNG
-												NHẬP</a></li>
-										<li><a class="dropdown-item" th:href="@{/dangky}" th:text="#{nav.signup}">ĐĂNG
-												KÝ</a></li>
-									
-
-									
-										<li><a class="dropdown-item" th:href="@{/doimatkhau}" th:text="#{nav.changepass}">ĐỔI
-												MẬT KHẨU</a></li>
-									
-									
-										<li><a class="dropdown-item" th:href="@{/quenmatkhau}" th:text="#{nav.forgotpass}">QUÊN
-												MẬT KHẨU</a></li>
-									
-
-									
+	<div th:fragment="user_menu">
+		<!-- header start -->
+		<div id="header">
+			<div class="menu">
+				<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+					<div class="container-fluid">
+						<a class="navbar-brand" th:href="@{/trangchu}"><img
+							src="/assets/images/logo.png" alt="logo"></a>
+						<button class="navbar-toggler" type="button"
+							data-bs-toggle="collapse" data-bs-target="#mynavbar">
+							<span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="mynavbar">
+							<ul class="navbar-nav mx-auto">
+								<li class="nav-item"><a class="nav-link nav-link-custom"
+									th:href="@{/trangchu}" th:text="#{nav.home}">TRANG CHỦ</a></li>
+								<li class="nav-item"><a class="nav-link nav-link-custom"
+									th:href="@{/sanpham}" th:text="#{nav.product}">SẢN PHẨM</a></li>
+								<li class="nav-item"><a class="nav-link nav-link-custom"
+									th:href="@{/gioithieu}" th:text="#{nav.about}">THÔNG TIN</a></li>
+								<li class="nav-item"><a class="nav-link nav-link-custom"
+									th:href="@{/cart}" th:text="#{nav.cart}">GIỎ HÀNG</a></li>
+								<li class="nav-item dropdown"><a
+									class="nav-link nav-link-custom dropdown-toggle" href="#"
+									role="button" data-bs-toggle="dropdown"
+									th:text="#{nav.language}">Ngôn ngữ</a>
+									<ul class="dropdown-menu">
+										<li><a class="dropdown-item" href="?lang=vi"
+											th:text="#{nav.vi}">Tiếng Việt</a></li>
+										<li><a class="dropdown-item" href="?lang=en"
+											th:text="#{nav.en}">English</a></li>
+									</ul></li>
+								<li class="nav-item dropdown">
+									<div th:if="${user == null}">
+										<a class="nav-link nav-link-custom dropdown-toggle" href="#"
+											role="button" data-bs-toggle="dropdown"
+											th:text="#{nav.account}">TÀI KHOẢN</a>
+									</div>
+									<div th:if="${user != null}">
+										<a class="nav-link nav-link-custom dropdown-toggle" href="#"
+											role="button" data-bs-toggle="dropdown"
+											th:text="${user.hoten}"></a>
+									</div>
+									<ul class="dropdown-menu">
+										<li><a class="dropdown-item" th:href="@{/dangnhap}"
+											th:text="#{nav.login}">ĐĂNG NHẬP</a></li>
+										<li><a class="dropdown-item" th:href="@{/dangky}"
+											th:text="#{nav.signup}">ĐĂNG KÝ</a></li>
+										<li><a class="dropdown-item" th:href="@{/doimatkhau}"
+											th:text="#{nav.changepass}">ĐỔI MẬT KHẨU</a></li>
+										<li><a class="dropdown-item" th:href="@{/quenmatkhau}"
+											th:text="#{nav.forgotpass}">QUÊN MẬT KHẨU</a></li>
 										<li><a class="dropdown-item"
-											th:href="@{/thaydoithongtin}" th:text="#{nav.infor}">THÔNG TIN CÁ NHÂN</a></li>
-										<li><a class="dropdown-item" th:href="@{/danhsachdonhang}" th:text="#{nav.order}">ĐƠN
+											th:href="@{/thaydoithongtin}" th:text="#{nav.infor}">THÔNG
+												TIN CÁ NHÂN</a></li>
+										<li><a class="dropdown-item"
+											th:href="@{/danhsachdonhang}" th:text="#{nav.order}">ĐƠN
 												HÀNG</a></li>
-										<li><a class="dropdown-item" th:href="@{/dangxuat}" th:text="#{nav.logout}">ĐĂNG
-												XUẤT</a></li>
-									
-
-
-								</ul>
-							</li>
-						</ul>
-						<!-- 							Tìm kiếm bắt đầu -->
-						<div class="p-3">
-							<a href="#" class="icon position-relative fs-4"
-								data-bs-toggle="offcanvas" data-bs-target="#demo"> <i
-								class="ti-search"></i>
-							</a>
-						</div>
-						<div class="offcanvas offcanvas-bottom" id="demo">
-							<div class="offcanvas-header">
-								<h1 class="offcanvas-title" style="margin-left: 43%;">Tìm
-									kiếm</h1>
-								<button type="button" class="btn-close"
-									data-bs-dismiss="offcanvas"></button>
+										<li><a class="dropdown-item" th:href="@{/dangxuat}"
+											th:text="#{nav.logout}">ĐĂNG XUẤT</a></li>
+									</ul>
+								</li>
+							</ul>
+							<!-- 							Tìm kiếm bắt đầu -->
+							<div class="p-3">
+								<a href="#" class="icon position-relative fs-4"
+									data-bs-toggle="offcanvas" data-bs-target="#demo"> <i
+									class="ti-search"></i>
+								</a>
 							</div>
-							<div class="offcanvas-body">
-								<form action="/search" method="get">
-									<div class="container input-group mb-3">
-										<input type="text" class="form-control" name="keyword"
-											 placeholder="Bạn muốn tìm gì?">
-										<button class="btn btn-success"
-											 type="submit">OK</button>
+							<div class="offcanvas offcanvas-bottom" id="demo">
+								<div class="offcanvas-header">
+									<h1 class="offcanvas-title" style="margin-left: 43%;">Tìm
+										kiếm</h1>
+									<button type="button" class="btn-close"
+										data-bs-dismiss="offcanvas"></button>
+								</div>
+								<div class="offcanvas-body">
+									<form action="/search" method="get">
+										<div class="container input-group mb-3">
+											<input type="text" class="form-control" name="keyword"
+												placeholder="Bạn muốn tìm gì?">
+											<button class="btn btn-success" type="submit">OK</button>
 
-									</div>
-								</form>
+										</div>
+									</form>
+								</div>
 							</div>
-						</div>
-						<!--                         tìm kiếm kết thúc -->
-
-						<!-- 						Lọc theo giá sản phẩm bắt đầu  -->
-						<div class="p-3">
-							<a href="#" class="icon position-relative fs-4"
-								data-bs-toggle="offcanvas" data-bs-target="#demo1"> <i
-								class="ti-bar-chart-alt"></i>
-							</a>
-						</div>
-						<div class="offcanvas offcanvas-bottom" style="height: 42vh;"
-							id="demo1">
-							<div class="offcanvas-header">
-								<h1 class="offcanvas-title" style="margin-left: 30%;">Tìm
-									kiếm sản phẩm theo khoảng giá</h1>
-								<button type="button" class="btn-close"
-									data-bs-dismiss="offcanvas"></button>
-							</div>
-							<div class="offcanvas-body">
-								<form method="post">
-									<div class="container mb-4">
-
-
-										<input type="text" class="form-control" name="min"
-											th:value="${min}" placeholder="Nhập giá thấp nhất"> <br>
-										<input type="text" class="form-control" name="max"
-											th:value="${max}" placeholder="Nhập giá cao nhất"><br>
-										<button class="btn btn-success mb-4"
-											th:formaction="@{/sanpham/timkiemgia}" type="submit">OK</button>
-									</div>
-
-								</form>
-							</div>
-						</div>
-						<!--                         lọc theo giá sản phẩm kết thúc -->
-						<div class="p-3">
-						
-						
-							<a th:href="@{/yeuthich}" class="icon position-relative fs-4">
-									
-								
-								<button class="badge badge-secondary"><i class="ti-heart" style="color: black"></i>
-    							 <span id="notificationBadge" class="badge badge-dark" style="color: black">{{ favoriteCount }}</span>
+							<!--                         tìm kiếm kết thúc -->
+							<div class="p-3">
+								<a th:href="@{/yeuthich}" class="icon position-relative fs-4">
+									<button class="badge badge-secondary">
+										<i class="ti-heart" style="color: black"></i> <span
+											id="notificationBadge" class="badge badge-dark"
+											style="color: black">{{ favoriteCount }}</span>
 									</button>
-
-							</a>
+								</a>
+							</div>
 						</div>
 					</div>
-				</div>
-			</nav>
-		</div>
-		<div class="menu-header">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-4 menu-item">
-						<h6 th:text="#{nav.nav1}">HÀNG CÓ SẴN CHÍNH HÃNG</h6>
-					</div>
-					<div class="col-md-4 menu-item">
-						<h6 th:text="#{nav.nav2}">
-							ĐỔI TRẢ LINH HOẠT
-							</h6>
-					</div>
-					<div class="col-md-4 menu-item">
-						<h6 th:text="#{nav.nav3}">SHIP HÀNG TOÀN QUỐC</h6>
+				</nav>
+			</div>
+			<div class="menu-header">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-4 menu-item">
+							<h6 th:text="#{nav.nav1}">HÀNG CÓ SẴN CHÍNH HÃNG</h6>
+						</div>
+						<div class="col-md-4 menu-item">
+							<h6 th:text="#{nav.nav2}">ĐỔI TRẢ LINH HOẠT</h6>
+						</div>
+						<div class="col-md-4 menu-item">
+							<h6 th:text="#{nav.nav3}">SHIP HÀNG TOÀN QUỐC</h6>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<marquee class="marquee-test" width="100%" scrollamount="20"
-			direction="left" height="auto" onmouseover="this.stop()"
-			onmouseout="this.start()" th:text="#{nav.nav4}">  </marquee>
+			<marquee class="marquee-test" width="100%" scrollamount="20"
+				direction="left" height="auto" onmouseover="this.stop()"
+				onmouseout="this.start()" th:text="#{nav.nav4}"> </marquee>
+		</div>
+		<!-- header end -->
 	</div>
-	<!-- header end -->
-</div>
 </body>
 </html>
