--- a/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
@@ -21,8 +21,10 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
 	integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
 	crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 <link th:href="@{/assets/css/mycss.css}" rel="stylesheet" />
+<!-- <link th:href="@{/assets/css/toastcss.css}" rel="stylesheet" /> -->
 <link th:href="@{/assets/font/themify-icons/themify-icons.css}"
 	rel="stylesheet" />
 	
